syntax = "proto3";

package user;


message User {
  string name = 1;
  string email = 2;
  string password=3;

}



message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message SearchUserRequest {
  string query = 1;
}

message SearchUsersResponse {
  repeated User users = 1;
}

message CreateUserRequest {
  string message=1;
}

message CreateUserResponse {
  User user = 1;
}

     
message UpdateUserRequest {
  string name = 1;
  string email = 2;
  string password=3;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc SearchUsers(SearchUserRequest) returns (SearchUsersResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

}
